--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <groupId>io.cdap.plugin</groupId>
   <artifactId>cobol-to-avro-transform</artifactId>
   <packaging>jar</packaging>
-  <version>1.1.0</version>
+  <version>1.2.0-SNAPSHOT</version>
   <name>Cobol to Avro Transform</name>
 
   <properties>
